--- a/CV.css
+++ b/CV.css
@@ -5,6 +5,20 @@ body{
     color: #252424;
     opacity: 0.9;
 }
+.bar{
+    background-color: #fff;
+    position: fixed;
+    left: 100px;
+    border-bottom-style: solid;
+    border-width: 1px;
+    font-size: 20px;
+    right: 40%;
+    opacity: 0.5;
+}
+
+.space{
+    margin:22px;
+}
 .container {
     padding-right: 15px;
     padding-left: 15px;
@@ -22,9 +36,10 @@ body{
 .button{
     background-color: rgb(99, 219, 219);
     color: white;
-    border-radius: 50px;
+    border-radius: 50px 50px 50px 0px;
     padding: 10px 30px;
 }
+
 .box-1
 {
     position: relative;
@@ -37,6 +52,9 @@ body{
 .box-2{
     position:relative;
     margin-left: 10px;
+}
+.round{
+    border-radius: 50%;
 }
 .gray
 {
