--- a/CV.css
+++ b/CV.css
@@ -26,7 +26,7 @@ h1{
 }
 .gray
 {
-    color:gray;
+    color:rgb(43, 39, 39);
     opacity: 0.8;
     position: absolute;
     margin: 0px auto;
@@ -56,7 +56,7 @@ h1{
     background-color: rgb(99, 219, 219);
     color: white;
     border-radius: 50px 50px 50px 0px;
-    font-size: 23px;
+    font-size: 17px;
     padding: 10px 30px;
 }
 
@@ -85,20 +85,21 @@ h1{
 .inner-circle{
     position: absolute;
     border-radius:50%;
-    width:350px;
-    height: 350px;
-    background-color: lightgrey;
-    top: 26px;
-    left: 25px;
-    opacity: 0.9;
+    width:365px;
+    height: 365px;
+    background-color: grey;
+    top: 19px;
+    left: 19px;
+    opacity: 0.5;
 }
 .outter-circle{
     position: absolute;
     border-radius:50%;
-    width: 380px;
-    height: 380px;
-    background-color:grey;
+    width: 400px;
+    height: 400px;
+    background-color:lightgrey;
     z-index: -1;
-    top: 10px;
+    top: 2px;
+    left: 0px;
     opacity: 0.6;
 }
